--- a/package.json
+++ b/package.json
@@ -22,14 +22,19 @@
     "buffer": "^6.0.3",
     "expo": "~51.0.28",
     "expo-crypto": "^13.0.2",
+    "expo-linear-gradient": "~13.0.2",
     "expo-linking": "^6.3.1",
+    "expo-media-library": "^16.0.5",
+    "expo-permissions": "^14.4.0",
     "expo-secure-store": "^13.0.2",
+    "expo-sharing": "^12.0.1",
     "expo-status-bar": "~1.12.1",
     "expo-web-browser": "~13.0.3",
     "react": "18.2.0",
     "react-native": "0.74.5",
     "react-native-chart-kit": "^6.12.0",
     "react-native-crypto": "^2.2.0",
+    "react-native-fs": "^2.20.0",
     "react-native-get-random-values": "^1.11.0",
     "react-native-randombytes": "^3.6.1",
     "react-native-safe-area-context": "^4.11.0",
@@ -40,7 +45,7 @@
     "redux-thunk": "^3.1.0",
     "tweetnacl": "^1.0.3",
     "tweetnacl-util": "^0.15.1",
-    "expo-linear-gradient": "~13.0.2"
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
